[tool.poetry]
name = "pydlt"
version = "0.0.0"  # using poetry-dynamic-versioning
description = "A pyre-python library to handle AUTOSAR DLT."
authors = ["Miki, Hiromitsu <mikiepure+dev@gmail.com>"]
license = "MIT"
homepage = "https://mikiepure.github.io/"
repository = "https://github.com/mikiepure/pydlt"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
ruff = "*"
pytest = "*"
rope = "*"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"


[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "dev",
    "__pycache__",
]
src = ["src/pydlt"]

[tool.pytest.ini_options]
pythonpath = "src/pydlt"
